appId: com.plannutricional.mobile
---
- launchApp
- assertVisible: "Plan Nutricional"
- tapOn: "Abrir plan"
- assertVisible: "Mi Plan"
- tapOn: "Extras"
- assertVisible: "Equivalencias"
- tapOn: "Kcal"
- assertVisible: "Calorias"
- tapOn: "Compras"
- assertVisible: "Compras"
- tapOn: "Resumen"
- assertVisible: "Resumen"
- tapOn: "Sups"
- assertVisible: "Suplementos"
